Playing around with distance calculations. Slowly approaching something of a zeroth order model

--- a/Trials/Oresund_filtering_1.ipynb
+++ b/Trials/Oresund_filtering_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,11 +273,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding new stuff 2/3 2025"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Class A' 'Class B' 'Base Station' 'AtoN'] 69149\n",
+      "['Class A' 'Class B'] 67423\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('../data/oresund/2025-01-19_filtered.csv')\n",
+    "print(data['Type of mobile'].unique(), len(data))\n",
+    "data = data[(data['Type of mobile']=='Class A') | (data['Type of mobile']=='Class B')]\n",
+    "print(data['Type of mobile'].unique(), len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Saving data 2/3 2025\n",
+    "date = '2025-01-19'\n",
+    "filename = '../data/oresund/'+date+'_filtered_2.csv'\n",
+    "if not os.path.exists(filename):\n",
+    "    data.to_csv(filename, index=False)"
+   ]
   }
  ],
  "metadata": {
