Looking at possible GUI, exploring the need for efficient classification, looking into efficient downloading of large files

--- a/First_model/Making_dataset.ipynb
+++ b/First_model/Making_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/29/jqsnm5js6_sc7663vjsq3mp40000gp/T/ipykernel_9712/3287667159.py:12: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/29/jqsnm5js6_sc7663vjsq3mp40000gp/T/ipykernel_43460/3287667159.py:12: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  data_temp = pd.concat([data_temp, ship], ignore_index=True)\n"
      ]
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/29/jqsnm5js6_sc7663vjsq3mp40000gp/T/ipykernel_9712/871613587.py:25: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/29/jqsnm5js6_sc7663vjsq3mp40000gp/T/ipykernel_43460/871613587.py:25: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  final = pd.concat([final, temp], ignore_index=True)\n"
      ]
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "[71 rows x 2 columns]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -698,12 +698,132 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "And at last I export the dataset for use in other codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = '../Data/First_model/Making_dataset/v1.csv'\n",
+    "if not os.path.exists(filename):\n",
+    "    final.to_csv(filename, index=False)\n",
+    "else:\n",
+    "    print('file ' +  filename + 'already exists')\n",
+    "\n",
+    "filename = '../Data/First_model/Making_dataset/data_filter.csv'\n",
+    "if not os.path.exists(filename):\n",
+    "    data_filter.to_csv(filename, index=False)\n",
+    "else:\n",
+    "    print('file ' +  filename + 'already exists')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I now realize that it was futile to separate data_filter and final and will be much more sensible to keep all data together (especially when doing GUI where I have to show all ships!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Adding a nice time variable (hours) to data_filter\n",
+    "data_filter['Time'] = pd.to_datetime(data_filter['# Timestamp'], dayfirst=True)\n",
+    "data_filter['Time'] = (data_filter['Time'] - data_filter['Time'].min()).dt.total_seconds() / (60*60)\n",
+    "\n",
+    "data_filter['SOA'] = np.nan  # Speed Over Axis\n",
+    "data_filter['Next cross'] = np.nan  # Time to next crossing\n",
+    "\n",
+    "for MMSI in data_filter['MMSI'].unique():\n",
+    "    index = data_filter['MMSI'] == MMSI\n",
+    "    ship = data_filter[index]\n",
+    "    dist = ship['Distance'].values\n",
+    "    time = ship['Time'].values\n",
+    "    soa = np.zeros(len(dist))\n",
+    "    if len(dist) > 1:\n",
+    "        soa[1:] = (dist[1:] - dist[:-1]) / (time[1:] - time[:-1])\n",
+    "        soa[0] = soa[1] #Assuming for simplicity\n",
+    "    \n",
+    "    next_cross = np.full(len(dist), np.nan)\n",
+    "\n",
+    "    cross_line = ((dist[:-1]*dist[1:]) < 0) #if the ship crosses the bridge the distances have different signs\n",
+    "    crossings = np.where(cross_line)[0] #Indices of crossings. ship.iloc[crossing] is just BEFORE the crossing\n",
+    "    prev_cross = 0\n",
+    "\n",
+    "    for crossing in crossings: #Iterating over the crossings. This code only runs if there is a crossing\n",
+    "        if ship['Longitude'].values[crossing] > 12.665767: #If the ship is not in Copenhagen habour (specific rule for this data set)\n",
+    "            #A weighted average to estimate the crossing time\n",
+    "            cross_time = (np.abs(dist[crossing+1])*time[crossing] + np.abs(dist[crossing])*time[crossing + 1])/(np.abs(dist[crossing+1]) + np.abs(dist[crossing]))\n",
+    "            \n",
+    "            #update next cross\n",
+    "            next_cross[prev_cross:crossing+1] = cross_time\n",
+    "            prev_cross = crossing\n",
+    "        else: #If it \"crosses\" in Copenhagen habour, it does not count as a crossing\n",
+    "            continue\n",
+    "                \n",
+    "    #Update the data\n",
+    "    data_filter.loc[index, 'SOA'] = soa\n",
+    "    data_filter.loc[index, 'Next cross'] = next_cross\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.9496462631446242), 0.17473118279569894)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Checking if it is consistent with final. it is!!!\n",
+    "MMSI_cross = []\n",
+    "for MMSI in data_filter['MMSI'].unique():\n",
+    "    ship = data_filter[data_filter['MMSI'] == MMSI]\n",
+    "    if not pd.isna(ship['Next cross']).all():\n",
+    "         MMSI_cross.append(MMSI)\n",
+    "    \n",
+    "\n",
+    "pd.isna(data_filter['Next cross']).sum() / len(data_filter), len(MMSI_cross) / len(data_filter['MMSI'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exporting the aggregated data\n",
+    "filename = '../Data/First_model/Making_dataset/data_filter_v2.csv'\n",
+    "if not os.path.exists(filename):\n",
+    "    data_filter.to_csv(filename, index=False)\n",
+    "else:\n",
+    "    print('file ' +  filename + 'already exists')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Down here are demonstrations of the workings of the code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
