Trying to grasp downloading and filtering huge files and organizing data efficiently for further analysis

--- a/25_3_data_getting/Trials_download.ipynb
+++ b/25_3_data_getting/Trials_download.ipynb
@@ -245,8 +245,9 @@
     "    headers = {\"Range\": f\"bytes={start}-{end}\"}\n",
     "    chunk_fname = f\"{fname}.part{chunk_idx}\"\n",
     "    \n",
+    "    #Stream=True to download in chunks and avoid loading the entire file into memory\n",
     "    with requests.get(url, headers=headers, stream=True) as r, open(chunk_fname, \"wb\") as f:\n",
-    "        for chunk in r.iter_content(chunk_size=1024 * 1024):  # 1 MB chunks\n",
+    "        for chunk in r.iter_content(chunk_size=1024 * 1024 * 10):  # 10 MB chunks\n",
     "            f.write(chunk)\n",
     "            progress_bar.update(len(chunk))\n",
     "\n",
@@ -266,6 +267,21 @@
     "        os.remove(chunk_file)  # Delete temporary chunk files\n",
     "\n",
     "print(f\"Download complete: {fname}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If write efficiency becomes a concern, you may try this:\n",
+    "\n",
+    "# import requests\n",
+    "# import shutil\n",
+    "\n",
+    "# with requests.get(url, headers=headers, stream=True) as r, open(chunk_fname, \"wb\") as f:\n",
+    "#     shutil.copyfileobj(r.raw, f, length=1024 * 1024 * 10)  # 10MB buffer\n"
    ]
   }
  ],
