--- a/todo.txt
+++ b/todo.txt
@@ -3,9 +3,10 @@ But I will require much more data!
 So now I will be working on scraping the site and automatically make the Oreswund cropping, filter and aggregate the data with relevant information
 
 line 1:
-1) Accessing the webpage with the data and downloading a day (month?)
-2) Handling extremely large CSV files?
+1) ENFORCE DATATYPES IN LOADING!!!
+2) Ensure that ship concatenation works!
 
 
 line 2:
 is there a more sensible distance metric than the simple signed one? one that can more elegantly take care of Copenhagen harbour?
+is there a simple way to aggregate data with timeseries data? E.g. a statistical measure of "stillness"
